--- a/src/pages/Desktop.css
+++ b/src/pages/Desktop.css
@@ -40,7 +40,7 @@
 }
 .desktop,
 .stack {
-  width: 1436px;
+  width: 100%;
   height: 6604px;
   display: flex;
   flex-direction: column;
